--- a/.project.conf
+++ b/.project.conf
@@ -1,6 +1,11 @@
 {
-   "clientId": "0003065",
-   "projectId": "0004687",
-   "generatedBy": "Pixel2HTML",
-   "generatedAt": "2018-03-12 15:31:09 -0400"
+  "projectName": "render-token",
+  "qtyScreens": 2,
+  "markupLanguage": "pug",
+  "frontEndFramework": false,
+  "jQuery": false,
+  "generatedBy": "Pixel2HTML",
+  "generatorVersion": "2.4.14",
+  "generatedAt": "2018-03-13T21:02:55.516Z",
+  "yarn": true
 }
