adding a bit of npm dependencies

--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     "@pixel2html/babel-preset": "^0.9.0",
     "@pixel2html/eslint-config": "^1.3.0",
     "@pixel2html/pipes": "^2.0.0",
+    "accordionjs": "^2.1.1",
     "babel-loader": "8.0.0-beta.2",
     "del": "^3.0.0",
     "eslint": "^4.18.1",
     "eslint-loader": "^2.0.0",
+    "fontfaceobserver": "^2.0.13",
     "fs-path": "^0.0.24",
     "gulp": "^4.0.0",
     "gulp-zip": "^4.1.0",
