--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "smooth-scroll": "^12.1.5",
     "uglifyjs-webpack-plugin": "^1.2.4",
     "webpack": "^4.1.1",
-    "yargs": "^11.0.0"
+    "yargs": "^11.0.0",
+    "youtube-player": "^5.5.0"
   },
   "devDependencies": {
     "@pixel2html/stylelint-config": "^1.5.3",
