roadmap boxes rotation

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@pixel2html/eslint-config": "^1.4.0",
     "@pixel2html/pipes": "^2.0.0",
     "babel-loader": "8.0.0-beta.2",
+    "badger-accordion": "^1.0.20",
     "del": "^3.0.0",
     "eslint": "^4.19.0",
     "eslint-loader": "^2.0.0",
