trying out some variables for the pixel demo

--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "start": "npm install",
     "code": "gulp",
-    "build": "gulp build --prod",
+    "build": "gulp build --prod --pixel2html --clientId=0003065 --projectId=0004687",
+    "build:normal": "gulp build --prod",
     "release": "gulp release --prod",
     "lint:js": "eslint 'src/**/*.js'",
     "fix:js": "eslint 'src/**/*.js' --fix",
