adding badger dependencies

--- a/package.json
+++ b/package.json
@@ -18,11 +18,14 @@
   },
   "dependencies": {
     "@babel/core": "^7.0.0-beta.42",
+    "@babel/plugin-transform-object-assign": "^7.0.0-beta.42",
     "@babel/runtime": "^7.0.0-beta.42",
     "@pixel2html/babel-preset": "^0.10.0",
     "@pixel2html/eslint-config": "^1.5.0",
     "@pixel2html/pipes": "^2.0.0",
     "babel-loader": "8.0.0-beta.2",
+    "babel-plugin-transform-object-assign": "^6.22.0",
+    "babel-preset-env": "^1.6.1",
     "badger-accordion": "^1.0.20",
     "del": "^3.0.0",
     "eslint": "^4.19.0",
