--- a/package.json
+++ b/package.json
@@ -35,9 +35,13 @@
     "headroom.js": "^0.9.4",
     "manila-mixins": "^3.6.0",
     "modularscale-sass": "^3.0.5",
+    "object-assign": "^4.1.1",
+    "promise": "^8.0.1",
+    "raf": "^3.4.0",
     "smooth-scroll": "^12.1.5",
     "uglifyjs-webpack-plugin": "^1.2.4",
     "webpack": "^4.1.1",
+    "whatwg-fetch": "^2.0.3",
     "yargs": "^11.0.0",
     "youtube-player": "^5.5.0"
   },
