--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "promise": "^8.0.1",
     "raf": "^3.4.0",
     "smooth-scroll": "^12.1.5",
+    "tiny-slider": "^2.6.0",
     "uglifyjs-webpack-plugin": "^1.2.4",
     "webpack": "^4.1.1",
     "whatwg-fetch": "^2.0.3",
