--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@pixel2html/pipes": "^2.0.0",
     "babel-loader": "8.0.0-beta.2",
     "cheerio": "^1.0.0-rc.2",
+    "critical": "^1.2.1",
     "del": "^3.0.0",
     "eslint": "^4.19.1",
     "eslint-loader": "^2.0.0",
